src/components/Navbar/navbar.scss
@import "../../global.scss";

.navbar {
  width: 100%;
  height: 70px;
  background-color: #fff;
  color: $mainColor;
  position: fixed;
  top: 0;
  z-index: 3;
  transition: all 1s ease;

  @include mobile {
    font-size: 20px;
  }

  .wrapper {
    width: 100%;
    padding: 10px 30px;
    display: flex;
    align-items: center;
    justify-content: space-between;

    .left {
      display: flex;

      .logo {
        font-size: 40px;
        font-weight: 700;
        text-decoration: none;
        color: inherit;

        @include mobile {
          font-size: 30px;
          margin-left: 0;
        }
      }

      .itemContainer {
        display: flex;
        align-items: center;
        margin-left: 30px;

        @include mobile {
          display: none;
        }

        a {
          color: #000;
        }

        .icon {
          font-size: 18px;
          margin-right: 5px;
          color: #000;
        }

        span {
          font-size: 15px;
          font-weight: 500;
          margin-right: 20px;
        }
      }
    }

    .right {
      .hamburger {
        width: 32px;
        height: 25px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        cursor: pointer;

        span {
          width: 100%;
          height: 3px;
          background-color: $mainColor;
          transform-origin: left;
          transition: all 2s ease;
        }
      }
    }
  }

  &.active {
    background-color: rgba(0, 0, 0, 0.495);
    color: white;


    .icon {
      -webkit-filter: invert(1);
      filter: invert(1);
      transition: all 1s ease;
    }

    .hamburger {
      span {
        &:first-child {
          background-color: white;
          transform: rotate(45deg);
        }
        &:nth-child(2) {
          opacity: 0;
        }
        &:last-child {
          background-color: white;
          transform: rotate(-45deg);
        }
      }
    }
  }
}

